--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,4 @@ baseURL = "https://nishanthkarthik.github.io"
 languageCode = "en-us"
 title = "nishanthkarthik's blog"
 theme = "paper"
+publishDir = "docs"
