--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,4 @@
-baseURL = "https://nishanthkarthik.github.io/docs"
+baseURL = "https://nishanthkarthik.github.io"
 languageCode = "en-us"
 title = "nishanthkarthik's blog"
 theme = "paper"
-publishDir = "docs"
